<?xml version="1.0" encoding="utf-8"?>

<!--Menyusun layout secara linear-->
<!--lebar layout memenuhi layar-->
<!--tinggi layout memenuhi layar-->
<!--Memberikan jarak tepi menggunakan padding-->
<!--Memberi background image yang di ambil dari folder drawable-->
<!--memberikan susunan layout secara vertical-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    >

    <!--Membuat lingkarang view imgae menggunakan dipendensi dari de.hdodenhof-->
    <!--lebar 104dp-->
    <!--tinggi 115dp-->
    <!--memberi jarak atas 37dp-->
    <!--memberi gambar dari folder drawable-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPict"
        android:layout_width="104dp"
        android:layout_height="115dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/utdi" />

    <!--memberikan tampilan text login-->
    <!--dengan ukuran 30dp-->
    <!--memberi jarak atas 10dp-->
    <!--memberi jarak bawah 20dp-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/login"
        android:textColor="#616161"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!--memberi intputan email-->
    <!--dengan id email-->
    <!--memiliki hint Email-->
    <!--dengan jarak bawah 10dp-->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textColorHint="#37474F" />

    <!--memberi intputan password-->
    <!--memberikan input typepasword agar saat menginputkan text di samarkan-->
    <!--dengan id password-->
    <!--memiliki hint Email-->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#37474F" />

    <!--membuat button-->
    <!--dengan id btn_login-->
    <!--memberi title button login-->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        tools:ignore="DuplicateSpeakableTextCheck" />
</LinearLayout>