<?xml version="1.0" encoding="utf-8"?>
<!--membuat susunan dasar layout dengan constrainLayout-->
<!--lebar layout memenuhi layar-->
<!--tinggi layout memenuhi layar-->
<!--Memberikan jarak tepi menggunakan padding-->
<!--Memberi background image yang di ambil dari folder drawable-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity_profile_parsing_data">

    <!-- memberi id untuk image view-->
    <!-- menampilkan poto dari folder drawable/potoku-->
    <!-- Untuk menampilkan image-->
    <!-- dengan lebar 422dp-->
    <!-- tinggi 225dp-->
    <!-- mengambil image dari folder drawabel-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="422dp"
        android:layout_height="225dp"
        android:src="@drawable/potoku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116"
        android:contentDescription="TODO" />

    <!--memberi id untuk linear layout-->
    <!--mengatur tata ukuran / tampilan  pada device android-->
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.077"
        tools:layout_editor_absoluteX="16dp">

        <!--mengatur tata ukuran / tampilan  pada device android-->
        <!--memberikan id textView-->
        <!--memberikan tampilan text nama-->
        <!--dengan ukuran 18dp-->
        <!--memberikan text tebal-->
        <!--letak texview berada di bawah image-->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/nama"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.181" />

        <!--mengatur tata ukuran / tampilan  pada device android-->
        <!--memberin id textView-->
        <!--memberikan tampilan text nama-->
        <!--dengan ukuran 18dp-->
        <!--memberikan text tebal-->
        <!--letak texview berada di bawah image-->
        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </LinearLayout>

    <!--memberi id untuk linear layout-->
    <!--mengatur tata ukuran / tampilan  pada device android-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1"
        app:layout_constraintVertical_bias="0.1"
        tools:layout_editor_absoluteX="16dp">

        <!--mengatur tata ukuran / tampilan  pada device android-->
        <!--memberikan tampilan text Nim-->
        <!--dengan ukuran 18dp-->
        <!--memberikan text tebal-->
        <!--memberikan jarak dari tepi kiri 36dp-->
        <!--letak texview berada di bawah inputan nama-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/nim"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

        <!--mengatur tata ukuran / tampilan  pada device android-->
        <!--memberikan tampilan text Nim-->
        <!--memiliki id tv_nim-->
        <!--dengan ukuran 18dp-->
        <!--memberikan text tebal-->
        <!--memberi jarak atas 10dp-->
        <!--letak texview berada di bawah inputan nama-->
        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

    </LinearLayout>

    <!--membuat button-->
    <!--dengan id button-->
    <!--mengatur tata ukuran / tampilan  pada device android-->
    <!--memberi title button kembali-->
    <!--membuat id button, berfungsi menjalankan fungsi yang ada di class kotlin-->
    <Button
        android:id="@+id/button"
        android:layout_width="234dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:text="@string/kembali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.247" />
</androidx.constraintlayout.widget.ConstraintLayout>